WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210131
WKUserScripts deferred from injection are not injected if -[WKWebView _notifyUserScripts] is called early
https://bugs.webkit.org/show_bug.cgi?id=210131
Summary
WKUserScripts deferred from injection are not injected if -[WKWebView _notify...
Timothy Hatcher
Reported
2020-04-07 10:14:46 PDT
If -[WKWebView _notifyUserScripts] is called early, before Frame::injectUserScripts() happens, pageWasNotified will still be false, allowing scripts to build up in m_userScriptsAwaitingNotification and never being injected (since -[WKWebView _notifyUserScripts] will not be called again).
Attachments
Patch
(3.78 KB, patch)
2020-04-07 11:03 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2020-04-07 11:03:19 PDT
Created
attachment 395710
[details]
Patch
Timothy Hatcher
Comment 2
2020-04-07 11:16:03 PDT
Comment hidden (obsolete)
<
rdar://problem/61368446
>
Radar WebKit Bug Importer
Comment 3
2020-04-07 11:16:25 PDT
Comment hidden (obsolete)
<
rdar://problem/61401382
>
Timothy Hatcher
Comment 4
2020-04-07 11:17:31 PDT
<
rdar://problem/61368446
>
EWS
Comment 5
2020-04-07 11:37:49 PDT
Committed
r259650
: <
https://trac.webkit.org/changeset/259650
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395710
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug