Cherry-pick r259650. rdar://problem/61419505

WKUserScripts deferred from injection are not injected if -[WKWebView _notifyUserScripts] is called early.
    https://bugs.webkit.org/show_bug.cgi?id=210131
    rdar://problem/61368446

    Reviewed by Brady Eidson.

    Source/WebCore:

    If Page::notifyToInjectUserScripts() is called early, before Frame::injectUserScripts() happens,
    m_hasBeenNotifiedToInjectUserScripts will be false, allowing scripts to build up in m_userScriptsAwaitingNotification
    and never being injected (since Page::notifyToInjectUserScripts() will not be called again).

    * page/Page.cpp:
    (WebCore::Page::notifyToInjectUserScripts): Set m_hasBeenNotifiedToInjectUserScripts to true when called.

    Tools:

    * TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/223028@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259650 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/222940.3@safari-610.1.9-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.9-branch@259696 268f45cc-cd09-0410-ab3c-d52691b4dbfc